frame/support/test/tests/pallet_ui/duplicate_default_type.rs
#[frame_support::pallet]
mod pallet {
	use frame_support::pallet_prelude::*;

	#[pallet::config]
	pub trait Config: frame_system::Config {
        #[pallet::default_type(u64)]
        #[pallet::default_type(u128)]
        type Balance: Parameter;
    }

	#[pallet::pallet]
	#[pallet::generate_store(trait Store)]
	pub struct Pallet<T>(core::marker::PhantomData<T>);
}

fn main() {
}
